Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112740

SplitView: Incorrect Rendering Between Layouts and Transparent Items

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.2, 6.6.0
    • 6.5, 6.6
    • Quick: Layouts
    • None
    • All
    • 1257e1d3b (dev), c144aff2c (6.5)

      When using a SplitView with any Layout type and a transparent item, there is a chance of encountering rendering issues when dragging or accelerating the handle quickly to one side. This issue can cause incorrect rendering between the two split items. To replicate the issue, perform a fast drag or acceleration of the handle to the left side.

       

      Starting point:

      Fast acceleration of the handle to the left side:

      Expected output (when dragging slowly):

       
       

      Minimal example:

      split-view-bug.qml

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            dennisoberst Dennis Oberst
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes