Allow a layout with width or height == 0 to resize its child items

Fixes: QTBUG-112740
Pick-to: 6.5
Change-Id: I66327f3fa76d3f1c14b62d0ac42d3fd4c28288b2
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>